# oz_coding

./: .gitignore  Ch04_task(code).ipynb  back.yaml  front.yaml  과제.html  과제2.html
.tmp.driveupload/: 1002  1006  1008  1010  1014  101819  101821  101825  101827  101829  101831  101833  101835  101837  101839  101841  101843  101847  101849  101851  101853  101855  101857  101859  101861  101863  101865  101867  101869  101871  101873  101875  101877  101879  101881  101883  101885  101887  101889  101891  (+834 more)
django/1일차/oz-backend-django/: db.sqlite3
django/1일차/oz-backend-django/config/: settings.py
django/2일차/oz-backend-django/: db.sqlite3  pyproject.toml
django/2일차/oz-backend-django/boards/: admin.py  models.py
django/3일차/oz-backend-django/: db.sqlite3
django/4일차/oz-backend-django/: db.sqlite3
django/5일차/oz-backend-django/: db.sqlite3
django/6일차/oz-backend-django/: db.sqlite3
django/7일차/oz-backend-django/: db.sqlite3  pyproject.toml
django/8일차/oz-backend-django/: db.sqlite3  pyproject.toml
django/8일차/oz-backend-django/boards/: admin.py
django/8일차/oz-backend-django/boards/migrations/: 0002_board_date_board_likes_board_reviews_board_writer.py
django/8일차/oz-backend-django/config/: settings.py
django/8일차/oz-backend-django/feeds/: serializers.py
django/8일차/oz-backend-django/reviews/: serializers.py  urls.py  views.py
django/9일차/oz-backend-django/: db.sqlite3
html/: 과제.html  과제2.html
리눅스/1일차/: linux_0113(문제).ipynb
리눅스/2일차/: linux_1426.ipynb
파이썬/: Untitled0.ipynb
파이썬/1일차/: Chapter0508_과제.ipynb
(+44 files in other folders)
